# bazel_rules_nodejs_contrib

./: .gitignore  WORKSPACE
examples/babel_library/: package.json
examples/jest_node_test/: BUILD.bazel  BsJest_test.bs.js  BsJest_test.re  bsconfig.json  jest.config.js  package.json
experimental/eslint/: package.json
experimental/nuxt_build/: package.json
internal/babel_library/: package.json
internal/json_to_js/: package.json
internal/toml_to_js/: package.json
internal/vue_component/: BUILD.bazel  package.json
